# obs-sl-browser

./: .clang-format  .gitignore  BrowserApp.cpp  BrowserApp.h  BrowserDockCaster.cpp  BrowserDockCaster.h  BrowserJsHandler.cpp  CMakeLists.txt  ConsoleToggle.h  CrashHandler.h  GrpcBrowser.cpp  GrpcBrowser.h  GrpcBrowserWindow.cpp  GrpcBrowserWindow.h  GrpcPlugin.cpp  GrpcPlugin.h  GrpcProxy.cpp  GrpcProxy.h  JavascriptApi.h  MakeMinidump.h  PluginJsHandler.cpp  PluginJsHandler.h  QtGuiModifications.cpp  QtGuiModifications.h  QtPostTask.h  README.md  SlBrowser.cpp  SlBrowser.h  SlBrowserDock.cpp  SlBrowserDock.h  SlBrowserWidget.cpp  SlBrowserWidget.h  URL.h  Util.h  WebServer.cpp  WebServer.h  WebSocketServer.cpp  WebSocketServer.h  WindowsFunctions.h  browser-app.cpp  (+16 more)
.github/workflows/: clear_publish_cache.yml  increment_next_rev.yml  interal_meta.yml  main.yml  obs_symbols.yml  publish.yml
CI/: build_nsis_package.ps1  clear_publish_cache.ps1  cmake_path.ps1  force_rebase_overwrite.ps1  increment_next_rev.ps1  install_deps.cmd  internal_meta.ps1  local_build.ps1  obs_symbols.ps1  pipeline.ps1  rebase.ps1  release.ps1  sign.ps1  start_builds.ps1  start_create_internal_meta.ps1  start_increment_next_rev.ps1
CI/code-signing/: package.json
cmake/: legacy.cmake
nsis/: package.nsi
sl-browser-page/: sl-browser-page-main.cpp
tools/cmake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
